--- a/app/src/main/res/layout/app_header.xml
+++ b/app/src/main/res/layout/app_header.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     app:layout_constraintTop_toTopOf="parent">
 
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -16,9 +17,12 @@
         <TextView
             android:id="@+id/app_header_title"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
             android:layout_gravity="center"
-            android:textColor="@color/black" />
+            android:textColor="@color/black"
+            />
 
         <ImageView
             android:id="@+id/app_header_search"
@@ -28,7 +32,7 @@
             app:layout_constraintLeft_toRightOf="@id/app_header_title"
             android:src="@drawable/search_icon_light"
             android:background="@drawable/search_icon_background_light"
-            android:padding="8dp"
+            android:padding="8sp"
             android:layout_marginRight="10dp"
             android:layout_marginEnd="10dp"
             android:contentDescription="@string/app_header_search_content_description" />
