--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -68,36 +68,57 @@
         android:id="@+id/settings_notifications_fragment"
         android:name="com.cornell.daily.sun.fragments.settings.NotificationsFragment"
         tools:layout="@layout/settings_notifications_fragment">
+        <action
+            android:id="@+id/notifications_to_settings"
+            app:destination="@id/settings_fragment" />
     </fragment>
     <fragment
         android:id="@+id/settings_subscribe_fragment"
         android:name="com.cornell.daily.sun.fragments.settings.SubscribeFragment"
         tools:layout="@layout/settings_subscribe_fragment">
+        <action
+            android:id="@+id/subscribe_to_settings"
+            app:destination="@id/settings_fragment" />
     </fragment>
     <fragment
         android:id="@+id/settings_theme_fragment"
         android:name="com.cornell.daily.sun.fragments.settings.ThemeFragment"
         tools:layout="@layout/settings_theme_fragment">
+        <action
+            android:id="@+id/theme_to_settings"
+            app:destination="@id/settings_fragment" />
     </fragment>
     <fragment
         android:id="@+id/settings_feedback_fragment"
         android:name="com.cornell.daily.sun.fragments.settings.FeedbackFragment"
         tools:layout="@layout/settings_feedback_fragment">
+        <action
+            android:id="@+id/feedback_to_settings"
+            app:destination="@id/settings_fragment" />
     </fragment>
     <fragment
         android:id="@+id/settings_contact_fragment"
         android:name="com.cornell.daily.sun.fragments.settings.ContactUsFragment"
         tools:layout="@layout/settings_contact_fragment">
+        <action
+            android:id="@+id/contact_to_settings"
+            app:destination="@id/settings_fragment" />
     </fragment>
     <fragment
         android:id="@+id/settings_history_fragment"
         android:name="com.cornell.daily.sun.fragments.settings.HistoryFragment"
         tools:layout="@layout/settings_history_fragment">
+        <action
+            android:id="@+id/history_to_settings"
+            app:destination="@id/settings_fragment" />
     </fragment>
     <fragment
         android:id="@+id/settings_appteam_fragment"
         android:name="com.cornell.daily.sun.fragments.settings.AppTeamFragment"
         tools:layout="@layout/settings_appteam_fragment">
+        <action
+            android:id="@+id/appteam_to_settings"
+            app:destination="@id/settings_fragment" />
     </fragment>
     <fragment
         android:id="@+id/search_fragment"
